--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               >
             </li>
             <li class="header-item item">
-              <a class="header-nav-link link" href="/portfolio.html"
+              <a class="header-nav-link link" href="./portfolio.html"
                 >Портфоліо</a
               >
             </li>
