--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css">
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body class="body">
     <!--Головний блок-->
-    <header class="container header">
+    <header class="header">
       <div class="container container-header">
       
         <a href="/" class="header-logo logo link" lang="en"
