--- a/portfolio.html
+++ b/portfolio.html
@@ -18,10 +18,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css">
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body class="body">
-    <header class="container header">
+    <header class="header">
       <div class="container container-header">
         <a href="/" class="header-logo logo link" lang="en"
           ><span class="header-accent-first">Web</span
@@ -152,11 +153,8 @@
                 class="exsamples-img"
                 src="./images/limited_edition.jpg"
                 alt="Дизайн для видання Limited Edition"
-                width="370"
-              />
-              <h2 class="exsamples-title">
-                Дизайн для видання Limited Edition
-              </h2>
+                width="370"/>
+              <h2 class="exsamples-title">Дизайн для видання Limited Edition</h2>
               <p class="exsamples-desc">Дизайн</p>
             </li>
 
@@ -185,7 +183,6 @@
     </main>
 
     <footer class="footer container">
-      <div class="container">
         <a href="/" class="footer-logo logo link" lang="en"
           ><span class="footer-accent-first">Web</span
           ><span class="footer-accent-second">Studio</span></a
@@ -213,7 +210,6 @@
             </li>
           </ul>
         </address>
-      </div>
     </footer>
   </body>
 </html>
