--- a/portfolio.html
+++ b/portfolio.html
@@ -18,17 +18,20 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body class="body">
     <header class="header">
-      <div class="container container-header">
+      <div class="container">
         <a href="/" class="header-logo logo link" lang="en"
           ><span class="header-accent-first">Web</span
           ><span class="header-accent-second">Studio</span></a
         >
-        <nav class="container header-nav">
+        <nav class="header-nav">
           <ul class="header-nav-items items">
             <li class="header-item item">
               <a class="header-nav-link link" href="./index.html">Студія</a>
@@ -44,7 +47,7 @@
           </ul>
         </nav>
 
-        <ul class="container header-contacts items">
+        <ul class="header-contacts items">
           <li class="header-contact">
             <a class="header-mail-link link" href="mailto:ingo@devstudio.com"
               >info@devstudio.com</a
@@ -60,7 +63,8 @@
     </header>
 
     <main class="portfolio">
-      <section class="container portfolio-customers">
+      <section class="portfolio-customers">
+        <div class="container">
           <h1 hidden class="portfolio-title">Портфоліо</h1>
           <ul class="portfolio-items items">
             <li class="portfolio-item item">
@@ -88,101 +92,125 @@
             </li>
           </ul>
 
-            <ul class="flex-container exsamples-items items">
+          <ul class="flex-container exsamples-items items">
             <li class="flex-element exsamples-item item">
-              <img
-                class="exsamples-img"
-                src="./images/technokryak.jpg"
-                alt="Веб-сайт Технокряк"
-              />
-              <h2 class="exsamples-title">Технокряк</h2>
-              <p class="exsamples-desc">Веб-сайт</p>
+              <div class="exsamples">
+                <img
+                  class="exsamples-img"
+                  src="./images/technokryak.jpg"
+                  alt="Веб-сайт Технокряк"
+                />
+                <h2 class="exsamples-title">Технокряк</h2>
+                <p class="exsamples-desc">Веб-сайт</p>
+              </div>
             </li>
             <li class="flex-element exsamples-item item">
-              <img
-                class="exsamples-img"
-                src="./images/new_orlean_vs_golden_star.jpg"
-                alt="Постер New Orlean vs Golden Star"
-                width="370"
-              />
-              <h2 class="exsamples-title">Постер New Orlean vs Golden Star</h2>
-              <p class="exsamples-desc">Дизайн</p>
+              <div class="exsamples">
+                <img
+                  class="exsamples-img"
+                  src="./images/new_orlean_vs_golden_star.jpg"
+                  alt="Постер New Orlean vs Golden Star"
+                  width="370"
+                />
+
+                <h2 class="exsamples-title">
+                  Постер New Orlean vs Golden Star
+                </h2>
+                <p class="exsamples-desc">Дизайн</p>
+              </div>
             </li>
             <li class="flex-element exsamples-item item">
-              <img
-                class="exsamples-img"
-                src="./images/seafood.jpg"
-                alt="Додаток ресторану Seefood"
-                width="370"
-              />
-              <h2 class="exsamples-title">Ресторан Seafood</h2>
-              <p class="exsamples-desc">Додаток</p>
+              <div class="exsamples">
+                <img
+                  class="exsamples-img"
+                  src="./images/seafood.jpg"
+                  alt="Додаток ресторану Seefood"
+                  width="370"
+                />
+                <h2 class="exsamples-title">Ресторан Seafood</h2>
+                <p class="exsamples-desc">Додаток</p>
+              </div>
             </li>
             <li class="flex-element exsamples-item item">
-              <img
-                class="exsamples-img"
-                src="./images/prime.jpg"
-                alt="Маркетинг для проєкту Prime"
-                width="370"
-              />
-              <h2 class="exsamples-title">Проєкт Prime</h2>
-              <p class="exsamples-desc">Маркетинг</p>
+              <div class="exsamples">
+                <img
+                  class="exsamples-img"
+                  src="./images/prime.jpg"
+                  alt="Маркетинг для проєкту Prime"
+                  width="370"
+                />
+                <h2 class="exsamples-title">Проєкт Prime</h2>
+                <p class="exsamples-desc">Маркетинг</p>
+              </div>
             </li>
             <li class="flex-element exsamples-item item">
-              <img
-                class="exsamples-img"
-                src="./images/boxes.jpg"
-                alt="Додаток для проєкту Boxes"
-                width="370"
-              />
-              <h2 class="exsamples-title">Проєкт Boxes</h2>
-              <p class="exsamples-desc">Додаток</p>
+              <div class="exsamples">
+                <img
+                  class="exsamples-img"
+                  src="./images/boxes.jpg"
+                  alt="Додаток для проєкту Boxes"
+                  width="370"
+                />
+                <h2 class="exsamples-title">Проєкт Boxes</h2>
+                <p class="exsamples-desc">Додаток</p>
+              </div>
             </li>
             <li class="flex-element exsamples-item item">
-              <img
-                class="exsamples-img"
-                src="./images/inspiration_has_no_borders.jpg"
-                alt="Веб-сайт Inspiration has no Borders"
-                width="370"
-              />
-              <h2 class="exsamples-title">Inspiration has no Borders</h2>
-              <p class="exsamples-desc">Веб-сайт</p>
+              <div class="exsamples">
+                <img
+                  class="exsamples-img"
+                  src="./images/inspiration_has_no_borders.jpg"
+                  alt="Веб-сайт Inspiration has no Borders"
+                  width="370"
+                />
+                <h2 class="exsamples-title">Inspiration has no Borders</h2>
+                <p class="exsamples-desc">Веб-сайт</p>
+              </div>
             </li>
             <li class="flex-element exsamples-item item">
-              <img
-                class="exsamples-img"
-                src="./images/limited_edition.jpg"
-                alt="Дизайн для видання Limited Edition"
-                width="370"/>
-              <h2 class="exsamples-title">Дизайн для видання Limited Edition</h2>
-              <p class="exsamples-desc">Дизайн</p>
+              <div class="exsamples">
+                <img
+                  class="exsamples-img"
+                  src="./images/limited_edition.jpg"
+                  alt="Дизайн для видання Limited Edition"
+                  width="370"
+                />
+                <h2 class="exsamples-title">Видання Limited Edition</h2>
+                <p class="exsamples-desc">Дизайн</p>
+              </div>
             </li>
 
             <li class="flex-element exsamples-item item">
-              <img
-                class="exsamples-img"
-                src="images/lab.jpg"
-                alt="Маркетинг для проєкту LAB"
-                width="370"
-              />
-              <h2 class="exsamples-title">Проєкт LAB</h2>
-              <p class="exsamples-desc">Маркетинг</p>
+              <div class="exsamples">
+                <img
+                  class="exsamples-img"
+                  src="images/lab.jpg"
+                  alt="Маркетинг для проєкту LAB"
+                  width="370"
+                />
+                <h2 class="exsamples-title">Проєкт LAB</h2>
+                <p class="exsamples-desc">Маркетинг</p>
+              </div>
             </li>
             <li class="flex-element exsamples-item item">
-              <img
-                class="exsamples-img"
-                src="./images/growing_business.jpg"
-                alt="Додаток Growing Business"
-                width="370"
-              />
-              <h2 class="exsamples-title">Growing Business</h2>
-              <p class="exsamples-desc">Додаток</p>
+              <div class="exsamples">
+                <img
+                  class="exsamples-img"
+                  src="./images/growing_business.jpg"
+                  alt="Додаток Growing Business"
+                  width="370"
+                />
+                <h2 class="exsamples-title">Growing Business</h2>
+                <p class="exsamples-desc">Додаток</p>
+              </div>
             </li>
           </ul>
+        </div>
       </section>
     </main>
 
-    <footer class="footer container">
+    <footer class="footer">
+      <div class="container">
         <a href="/" class="footer-logo logo link" lang="en"
           ><span class="footer-accent-first">Web</span
           ><span class="footer-accent-second">Studio</span></a
@@ -210,6 +238,7 @@
             </li>
           </ul>
         </address>
+      </div>
     </footer>
   </body>
 </html>
