--- a/portfolio.html
+++ b/portfolio.html
@@ -92,116 +92,133 @@
             </li>
           </ul>
 
-          <ul class="flex-container exsamples-items items">
-            <li class="flex-element exsamples-item item">
-              <div class="exsamples">
+          <ul class="exsamples-items items">
+            <li class="exsamples-item item">
+              <a class="link examples-click" href="">
                 <img
-                  class="exsamples-img"
+                   class="exsamples-img"
                   src="./images/technokryak.jpg"
                   alt="Веб-сайт Технокряк"
                 />
+                <div class="exsamples">
                 <h2 class="exsamples-title">Технокряк</h2>
                 <p class="exsamples-desc">Веб-сайт</p>
+              </a>
               </div>
             </li>
-            <li class="flex-element exsamples-item item">
-              <div class="exsamples">
+            <li class="exsamples-item item">
+              <a class="link examples-click" href="">
                 <img
                   class="exsamples-img"
                   src="./images/new_orlean_vs_golden_star.jpg"
                   alt="Постер New Orlean vs Golden Star"
                   width="370"
                 />
-
+                <div class="exsamples">
                 <h2 class="exsamples-title">
                   Постер New Orlean vs Golden Star
                 </h2>
                 <p class="exsamples-desc">Дизайн</p>
+              </a>
               </div>
             </li>
-            <li class="flex-element exsamples-item item">
-              <div class="exsamples">
+            <li class="exsamples-item item">
+              <a class="link examples-click" href="">
                 <img
                   class="exsamples-img"
                   src="./images/seafood.jpg"
                   alt="Додаток ресторану Seefood"
                   width="370"
                 />
+                <div class="exsamples">
                 <h2 class="exsamples-title">Ресторан Seafood</h2>
                 <p class="exsamples-desc">Додаток</p>
+              </a>
               </div>
             </li>
-            <li class="flex-element exsamples-item item">
-              <div class="exsamples">
+            <li class="exsamples-item item">
+              <a class="link examples-click" href="">
                 <img
                   class="exsamples-img"
                   src="./images/prime.jpg"
                   alt="Маркетинг для проєкту Prime"
                   width="370"
                 />
+                <div class="exsamples">
                 <h2 class="exsamples-title">Проєкт Prime</h2>
                 <p class="exsamples-desc">Маркетинг</p>
+              </a>
               </div>
             </li>
-            <li class="flex-element exsamples-item item">
-              <div class="exsamples">
+            <li class="exsamples-item item">
+              <a class="link examples-click" href="">
                 <img
                   class="exsamples-img"
                   src="./images/boxes.jpg"
                   alt="Додаток для проєкту Boxes"
                   width="370"
                 />
+                <div class="exsamples">
                 <h2 class="exsamples-title">Проєкт Boxes</h2>
                 <p class="exsamples-desc">Додаток</p>
+              </a>
               </div>
             </li>
-            <li class="flex-element exsamples-item item">
-              <div class="exsamples">
+            <li class="exsamples-item item">
+              <a class="link examples-click" href="">
                 <img
                   class="exsamples-img"
                   src="./images/inspiration_has_no_borders.jpg"
                   alt="Веб-сайт Inspiration has no Borders"
                   width="370"
                 />
+                <div class="exsamples">
                 <h2 class="exsamples-title">Inspiration has no Borders</h2>
                 <p class="exsamples-desc">Веб-сайт</p>
+              </a>
               </div>
             </li>
-            <li class="flex-element exsamples-item item">
-              <div class="exsamples">
+            <li class="exsamples-item item">
+              <a class="link examples-click" href="">
                 <img
                   class="exsamples-img"
                   src="./images/limited_edition.jpg"
                   alt="Дизайн для видання Limited Edition"
                   width="370"
                 />
+                <div class="exsamples">
                 <h2 class="exsamples-title">Видання Limited Edition</h2>
                 <p class="exsamples-desc">Дизайн</p>
+              </a>
               </div>
             </li>
 
-            <li class="flex-element exsamples-item item">
-              <div class="exsamples">
+            <li class="exsamples-item item">
+              <a class="link examples-click" href="">
                 <img
                   class="exsamples-img"
                   src="images/lab.jpg"
                   alt="Маркетинг для проєкту LAB"
                   width="370"
                 />
+                <div class="exsamples">
                 <h2 class="exsamples-title">Проєкт LAB</h2>
                 <p class="exsamples-desc">Маркетинг</p>
+              </a>
               </div>
             </li>
-            <li class="flex-element exsamples-item item">
-              <div class="exsamples">
+            <li class="exsamples-item item">
+              <a class="link examples-click" href="">
                 <img
                   class="exsamples-img"
                   src="./images/growing_business.jpg"
                   alt="Додаток Growing Business"
                   width="370"
                 />
+                <div class="exsamples">
                 <h2 class="exsamples-title">Growing Business</h2>
                 <p class="exsamples-desc">Додаток</p>
+              </a>
               </div>
             </li>
           </ul>
